kubernetes/apps/base/media/navidrome/deployment.yaml
# Navidrome - Music streaming server
#
# https://www.navidrome.org/
# https://hub.docker.com/r/deluan/navidrome
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: media
    spec:
      securityContext:
        fsGroup: 3001
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.59.0 # {"$imagepolicy": "flux-system:navidrome"}
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
            - name: media
              mountPath: /music
              subPath: music
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
